# holbertonschool-binary_trees

./: 0-binary_tree_node.c  0-main.c  1-binary_tree_insert_left.c  1-main.c  10-binary_tree_depth.c  10-main.c  11-binary_tree_size.c  11-main.c  12-binary_tree_leaves.c  12-main.c  13-binary_tree_nodes.c  13-main.c  14-binary_tree_balance.c  14-main.c  15-binary_tree_is_full.c  15-main.c  16-binary_tree_is_perfect.c  16-main.c  17-binary_tree_sibling.c  17-main.c  18-binary_tree_uncle.c  18-main.c  2-binary_tree_insert_right.c  2-main.c  3-binary_tree_delete.c  3-main.c  4-binary_tree_is_leaf.c  4-main.c  5-binary_tree_is_root.c  5-main.c  6-binary_tree_preorder.c  6-main.c  7-binary_tree_inorder.c  7-main.c  8-main.c  9-binary_tree_height.c  9-main.c  CMakeLists.txt  README.md  binary_tree_print.c  (+3 more)
